# fun

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  dune-project  fun.opam
.opencode/skills/de-bruijn-debugging/: SKILL.md
docs/: 1.struct_as_module.md  10.record_type_reflection_plan.md  11.trait_plan.md  12.trait_module_stdlib_plan.md  13.generated_symbol_cleanup_plan.md  14.references_plan.md  15.enforest_improvement_plan.md  2.dependent_types.md  3.wiring_checklist.md  4.core_tt_records.md  5.core_tt_type_specialized_equality.md  6.core_tt_qualified_paths.md  7.algebraic_effects_plan.md  8.regression_coverage_plan.md  9.type_case_generic_programming_plan.md
docs/plan-for-macros/: IMPLEMENTATION_PLAN.md  INDEX.md  STAGE_7_ENFORESTATION_PLAN.md  STAGE_8_PLAN.md  STAGE_8_PROGRESS.md  SUMMARY.md  SYNTAX_SPEC.md
lib/backend/interp/: dune  env.ml  eval.ml  interp.ml  model.ml  nbe.ml  nbe_error.ml  nbe_prim.ml  nbe_quote.ml  (+1 more)
lib/core_kernel/: atom.ml  atom_ty.ml  core.ml  debug.ml  dune  explicitness.ml  syntax.ml  trait_bound.ml
lib/expand/: binding.ml  dune  enforest.ml  enforest_decl_helpers.ml  enforest_forms.ml  enforest_pat.ml  enforest_template.ml  enforest_util.ml  expand.ml  expand_ctx.ml  lower_surface.ml  macro_eval.ml  macro_value.ml  operator_env.ml  parse_error.ml  parse_expand.ml  parse_spec.ml  surface_to_syntax.ml  syntax_class.ml  syntax_template.ml
lib/loader/: core_loader.ml  dune  loader.ml
lib/std/: dune  exceptions.ml  nonempty_list.ml  nonempty_list.mli  std.ml
lib/syntax/: ast.ml  ast.mli  core_lexer.ml  core_parser.mly  desugar.ml  desugared_ast.ml  dune  lexer.ml  lexer.mli  parser.mly  raw_syntax.ml  scope_set.ml  source_span.ml  surface.ml  syntax.ml  tests.ml
lib/type/: dune  type.ml  type.mli
test/: dune
test/backend/: dune  test_core.ml
test/semantic/: dune  test_elaborate.ml
test/syntax/: dune  test_enforest.ml  test_expand_compat.ml  test_line_counts.ml  test_macros.ml  test_match_parse.ml  test_parse_effects.ml  test_parse_patterns.ml  test_parse_smoke.ml  test_parse_traits_refs.ml  test_scope_sets.ml  test_spec.ml  test_syntax.ml
(+75 files in other folders)
